1.5
 * Added dynamic URL support

1.4
 * Added PNG images
 * Fixed offline crash
 * Improved background update check
 * Removed BMP images

1.3
 * Added revision checking
 * Fixed invalid xml crash
 * Fixed GDI handle leak
 * Fixed caching

1.2
 * Improved UI
 * Improved internet connectivity check for Vista and above (INetworkListManager)
 * Improved download speed calculation
 * Improved time remaining calculation
 * Fixed auto-update prompt location if PH minimized
 * Fixed install failures if hash check failed

1.1
 * Added download speed
 * Added remaining time
 * Fixed buffer zeroing
 * Fixed threading memory leak

1.0
 * Initial release

